# quantdata-mcp

./: .gitignore  README.md  pyproject.toml
quantdata_mcp/: __init__.py  __main__.py  browser_auth.py  client.py  config.py  server.py  setup.py  tools.py
