[project]
name = "quantdata-mcp"
version = "0.1.0"
description = "MCP server for QuantData options market data — GEX/DEX/CEX/VEX walls, net drift, max pain, IV rank, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Zachary Zulanas", email = "zzulanas@gmail.com"}]
dependencies = [
    "requests>=2.32.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
quantdata-mcp = "quantdata_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
